--- a/index.html
+++ b/index.html
@@ -12,5 +12,29 @@
     <title>Kendra Staver</title>
 </head>>
 
-<body></body>
+<body>    
+    <header>
+    <span class="span-background title">
+        <h1>Kendra Staver</h1>
+    </span>
+    <nav>
+        <ul class="nav-effects">
+            <li>
+                <a href="#about-me">About Me</a>
+            </li>
+            <li>
+                <a href="#work">Work</a>
+            </li>
+            <li>
+                <a href="#contact-me">Contact Me</a>
+            </li>
+            <li>
+                <a href="./assets/resume/Kendra Staver - Resume 2021.docx" download>Resume</a>
+            </li>
+        </ul>
+    </nav>
+</header>
+
+</body>
+
 <footer></footer>
