Hero Section created

--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
     </nav>
 </header>
 
+    <!-- Here Section -->
+    <section class="hero">
+        <!-- Flex Container-->
+        <div class="hero-subtitle">           
+                <span class="span-background opacity">Ph'nglui mglw'nafh Cathulhu R'lyeh wgah'nagl fhtagn</span>
+        </div>
+    </section>
+
+
 </body>
 
 <footer></footer>
