About me article grid added

--- a/index.html
+++ b/index.html
@@ -43,6 +43,24 @@
         </div>
     </section>
 
+        <!-- About Me Article Grid-->
+        <article> 
+            <div id="about-me" class="about-me-wrapper">
+                <div class="about-me-grid-container">
+                    <div class="about-me-item about-me-title">
+                        <p> About me </p>
+                    </div>
+                    <div class="about-me-item p1">
+                        <p>*internally screaming*</p>
+                    </div>
+                    <div class="about-me-item p2">
+                        <p>Attemping to make a huge career change to better my life and do something that I actually enjoy.</p>
+                    </div>  
+                </div>
+            </div> 
+        </article>
+    
+
 
 </body>
 
