--- a/index.html
+++ b/index.html
@@ -113,8 +113,23 @@
         </div>
     </article>
 
-
-
+    <!-- Footer Grid-->
+    <footer>
+        <div id="contact-me" class="footer-wrapper">
+            <div class="footer-container">
+              <div class="footer-grid-item contact-me">
+                    Contact Me
+                </div>
+                <div class="footer-grid-item phone">
+                    <a href="tel:408-431-2895" class="nav-effects">408-431-2895</a>
+                </div>
+                <div class="footer-grid-item email"> 
+                    <a href="mailto:staverkendra@gmail.com">staverkendra@gmail.com</a>
+                </div>
+                <div class="footer-grid-item git-hub"> 
+                    <a href="https://github.com/kstaver/" target="_blank">GitHub</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
-
-<footer></footer>
