--- a/index.html
+++ b/index.html
@@ -132,4 +132,19 @@
             </div>
         </div>
     </footer>
+
+    <!---- Javascript for connecting links to work project classes -->
+    <!---- More if else statements can be included once more projects have been created -->
+    <script> 
+        function projectClicked(input) {
+            var input = input;
+    
+            if (input == "challenge-1-refactor") {
+                window.open("https://kstaver.github.io/horiseon-refactored/");
+            } else {
+                return true; /* Return true as no other landing pages are ready to be displayed */
+            }
+        };
+    </script>
 </body>
+</html>
