updated css to reflect new project being added

--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
                     </span>
                 </div>
                 
-                <div alt="Image of a surprised cat with space background" title="Placeholder 3" style="cursor: pointer;" class="work-item-project coming-soon-three">
+                <div alt="Front Page" title="Placeholder 3" style="cursor: pointer;" class="work-item-project culinaryeats">
                     <span class="span-background">
-                        <h3>Coming soon!</h3>
-                        <span class="lower-text">Who knows!?</span>
+                        <h3>CulinaryEats</h3>
+                        <span class="lower-text">A website for those who want to share recipes from around the world and rate their favorites dishes!</span>
                     </span>
                 </div>
                 
