--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </span>
                 </div>
                 
-                <div alt="Front Page" title="Placeholder 3" style="cursor: pointer;" class="work-item-project culinaryeats">
+                <div onclick="projectClicked('culinaryeats')" alt="Front Page" title="CulinaryEats" target="_blank" style="cursor: pointer;" class="work-item-project culinaryeats">
                     <span class="span-background">
                         <h3>CulinaryEats</h3>
                         <span class="lower-text">A website for those who want to share recipes from around the world and rate their favorites dishes!</span>
