added culinaryeats to projectClicked

--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
                 window.open("https://asecord92.github.io/brew-finder/");
             } else if(input == "web-api-quiz"){
                 window.open("https://kstaver.github.io/web-API-quiz/");
+            } else if(input == "culinaryeats"){
+                window.open("https://culinaryeats.herokuapp.com/");
             }else{
                 return true; /* Return true as no other landing pages are ready to be displayed */
             }
